fix issue template character limit

--- a/.github/ISSUE_TEMPLATE/header_file/add_bioeco_metadata_head.yml
+++ b/.github/ISSUE_TEMPLATE/header_file/add_bioeco_metadata_head.yml
@@ -1,5 +1,5 @@
 name: header file
-description: This form is designed for users to easily record, document, and update metdata about BioEco ocean observing projects. Metadata recorded here will flow to the GOOS BioEco Portal and ODIS. When you are sure the information recorded is complete, please add the "auto pr" label to the issue so the JSON-LD file will be generated for you.
+description: This form is designed for users to easily record, document, and update metdata about BioEco ocean observing projects. Metadata recorded here will flow to the GOOS BioEco Portal and ODIS.
 title: '[Add new BioEco metadata record]: '
 assignees:
 - EliLawrence
@@ -7,6 +7,9 @@ body:
 - type: markdown
   attributes:
     value: Thanks for taking the time to contribute your BioEco metadata. Your contributions help enhance our global understanding of ocean observations.
+- type: markdown
+  attributes:
+    value: When you are sure the information recorded is complete, please add the "auto pr" label to the issue so the JSON-LD file will be generated for you.
 - type: input
   id: project-name
   attributes:
