--- a/.github/ISSUE_TEMPLATE/add_bioeco_metadata.yml
+++ b/.github/ISSUE_TEMPLATE/add_bioeco_metadata.yml
@@ -10,6 +10,9 @@ body:
   attributes:
     value: Thanks for taking the time to contribute your BioEco metadata. Your contributions
       help enhance our global understanding of ocean observations.
+- type: markdown
+  attributes:
+    value: When you are sure the information recorded is complete, please add the "auto pr" label to the issue so the JSON-LD file will be generated for you.
 - type: input
   id: project-name
   attributes:
