--- a/.github/ISSUE_TEMPLATE/header_file/add_bioeco_metadata_head.yml
+++ b/.github/ISSUE_TEMPLATE/header_file/add_bioeco_metadata_head.yml
@@ -29,7 +29,7 @@ body:
 - type: input
   id: contact-name
   attributes:
-    label: Point of Contact
+    label: Point of Contact - Name
     description: Who is the best person (or organization) that someone can get in touch with if more info is needed?
     placeholder: 'examples: Alex Smith, OBIS Helpdesk'
   validations:
@@ -37,7 +37,7 @@ body:
 - type: input
   id: contact-url
   attributes:
-    label: Point of Contact
+    label: Point of Contact - Email
     description: How can this contact point be reached?
     placeholder: ex. email@example.com
   validations:
