--- a/.github/ISSUE_TEMPLATE/header_file/add_bioeco_metadata_head.yml
+++ b/.github/ISSUE_TEMPLATE/header_file/add_bioeco_metadata_head.yml
@@ -9,7 +9,7 @@ body:
     value: Thanks for taking the time to contribute your BioEco metadata. Your contributions help enhance our global understanding of ocean observations.
 - type: markdown
   attributes:
-    value: When you are sure the information recorded is complete, please add the "auto pr" label to the issue so the JSON-LD file will be generated for you.
+    value: '# Basic programme metadata'
 - type: input
   id: project-name
   attributes:
@@ -97,6 +97,21 @@ body:
     placeholder: POLYGON ((-1.61499 56.36525, 2.51587 52.46940, 6.67969 54.43810, 6.25122 57.30872, -1.61499 56.36525))
   validations:
     required: false
+- type: dropdown
+  id: frequency
+  attributes:
+    label: 
+    description: Select how often you expect records in your sitemap to change
+    multiple: true
+    options:
+    - never
+    - yearly
+    - monthly
+    - weekly
+    - daily
+    - hourly
+    validations:
+      required: true
 - type: markdown
   attributes:
     value: '# EOV data collection metadata'
