--- a/.github/ISSUE_TEMPLATE/update_existing_entry.yml
+++ b/.github/ISSUE_TEMPLATE/update_existing_entry.yml
@@ -12,11 +12,11 @@ body:
 - type: dropdown
   id: project-id
   attributes:
-    label: Select the name of the existing entry
-    description: Choose the name corresponding to the entry you wish to update.
+    label: Existing entry name
+    description: Select the name corresponding to the entry you wish to update.
     multiple: false
     options:
-      <!-- FOLDER_NAMES_PLACEHOLDER -->
+      #<!-- FOLDER_NAMES_PLACEHOLDER -->
 - type: markdown
   attributes:
     value: The rest of this form will have all the fields from the first submission. Only fill in the fields you want to update; leave others blank to keep the existing information unchanged. 
