--- a/.github/ISSUE_TEMPLATE/update_existing_entry.yml
+++ b/.github/ISSUE_TEMPLATE/update_existing_entry.yml
@@ -16,7 +16,7 @@ body:
     description: Select the name corresponding to the entry you wish to update.
     multiple: false
     options:
-      #<!-- FOLDER_NAMES_PLACEHOLDER -->
+      - None
 - type: markdown
   attributes:
     value: The rest of this form will have all the fields from the first submission. Only fill in the fields you want to update; leave others blank to keep the existing information unchanged. 
