--- a/.github/ISSUE_TEMPLATE/header_file/add_bioeco_metadata_head.yml
+++ b/.github/ISSUE_TEMPLATE/header_file/add_bioeco_metadata_head.yml
@@ -100,7 +100,7 @@ body:
 - type: dropdown
   id: frequency
   attributes:
-    label: 
+    label: Update frequency
     description: Select how often you expect records in your sitemap to change
     multiple: true
     options:
@@ -110,8 +110,8 @@ body:
     - weekly
     - daily
     - hourly
-    validations:
-      required: true
+  validations:
+    required: true
 - type: markdown
   attributes:
     value: '# EOV data collection metadata'
